--- a/High Concept Rev1/HighConceptRev1.tex
+++ b/High Concept Rev1/HighConceptRev1.tex
@@ -62,13 +62,12 @@ Player controls different avatars and guides them through a series of quests. Av
 
 \subsection*{Unique Selling Points}
     \begin{enumerate}
-        \item Fighting moves within a platforming game
-        \item An interesting and fascinating story 
-        \item Stand out in the current market dominated by competitive multi-player games. Avoids the online toxicity.
-        \item Simple to pick up hard to master.
-        \item Combines multiple genres and gameplay style
-        \item The mech-scifi Universe and Gundam character models allow the players to experience a world set place in the Gundam Universe, which can attract fans of Gundam series.
-        \item An item system that allows player's to improve their character 
+        \item Classic plat-forming experience with fighting game abilities 
+        \item a innovative combat system that allows the player to combo and style on his enemies
+        \item An atmospheric based story telling
+        \item Giant robots fighting in space
+        \item Gundam characters will appeal to Gundam fans
+        \item Upgrade your gundam by taking the scrap from your slayed foes 
     \end{enumerate}
 
 \subsection*{Competitor}
@@ -86,10 +85,12 @@ Player controls different avatars and guides them through a series of quests. Av
 \subsection*{Feature}
     \begin{enumerate}
         \item A tutorial devised to teach the player how to play through experience rather than text.
-        \item Well designed level filled with action. Each with their own uniquely designed boss
+        \item Well designed level that are fair and action packed. Each with their own uniquely designed boss
         \item An advanced combo system that allows the player to link his attacks into another as long as his opponent is still within hit-stun. There will be a launcher attack which launches the enemy into the air allowing the player to jump and continue his combo. If the player strings too many of the same attacks the combo will drop, this is to prevent infinite combos. This system will allow many different combos allowing the player to create their attack style.
         \item An movement system with 2 states: walking and dashing. During walk stat the player moves at default speed and has complete control of the movement of avatar. Dashing by tapping movement direction twice to dash a short distance at the expense of some boost meter to perform an evasive action. During boost state the avatar can boost vertically upward or horizontally with some deviation based on directional input. This can make avatar reach far distances but only with sufficient boost meter.
-        \item An advanced item system that allows player's to upgrade their gundam using scrap 
+        \item An  item system that allows player's to upgrade their Gundam using scrap 
+        \item Enemies drop scrap upon defeat that the player can use to upgrade or maintain their Gundam
+        \item The player will have access to ranged and melee attacks.
     \end{enumerate}
     
 
@@ -98,11 +99,12 @@ Player controls different avatars and guides them through a series of quests. Av
     \begin{enumerate}
         \item Level's that feel fun, fair but still challenging
         \item To be stylish. The game isn't about destroying enemy but to style on them through use of combos
-        \item Creating Player Progression: the player should feel like they are able to grow their character. 
+        \item Creating Player Progression: the player should feel like they are making progress on their character. 
         \item Simple to pickup but hard to master:  Very simple movement controls that makes the game easy to learn but applying the movements make it hard to master.
         \item Low Skill Floor: The controls of the player's avatar will be very simple and intuitive. The player should be able to pick up the control without need to read the instructions.
         \item High Skill Ceiling: The game's combat system will provide the player with many different options allowing the players to express their own play-style. The play can get by with simple combo's but in order to stylish, intricate combos will further raise the skill ceiling.
-        \item Exciting: The game should feel fast and full of action.
+        \item Exciting: The game should feel fast, full of action and fun.
+        \item Fairness: The game should feel fair rather than frustrating, where dangers 
     \end{enumerate}
 
 
@@ -127,7 +129,7 @@ The Sci-Fi, futuristic, and mechanical aesthetic is chosen because the setting o
     \subsubsection*{Sound and Music Style}
     Overall we wanted to use music and sound affect that would fit the graphical theme while enhancing the gameplay. We also want to use sound that are somewhat realistic in the context of the game. The music will be fast paced music similar to Dynasty Warrior games to keep players on their toes. The music will also have a techno spin to it to add to the Sci-Fi feel of the game. Other sound in the game include sound of walking, hitting, and firing of weapons. For walking, the sound will contain metal clanking and quaking to simulate the step of large machinery. The sound of hitting will include sound of clashing metal for robotic fistfights, and sizzling of laser to simulate use of beam sabers. Firing of automatic ballistic weapons will sound like machine guns. Firing laser weaponry will sound like a zip but much lower and heavier to give impact.\\\\
     \subsubsection*{Atmosphere}
-The atmosphere of this game is tense and serious, as the player's character is fighting a war and trying to uncover his uncertain past. During combat the atmosphere is more lighthearted because the gameplay is a 2D beat-em-up style platforming. However with the context of the games setting, since the player is suppose to be using a highly advanced war machine, able to dispatch enemies like nothing else. It is not completely fun and goofy even during gameplay. 
+    The main feeling that the player should get from this game is feeling skilled, fast, heroic and powerful. That the player in one machine faces equally or more powerful machines but manages to overcome them due to their bravery, intelligence and reflexes. To sum up what we are trying to make the player feel is the feeling of one man vs one hundred. This atmosphere is captured during combat where the player can easily dispatch many enemies. The atmosphere will change from level to level but the above is core feelings the player  should remember after playing. The atmosphere will change from level to level. The first level attempts to give off a metallic and industrialized setting than slowly changes into a more hot and volcanic atmosphere. The levels will always attempt to match the aesthetics and character of our boss. The atmosphere of this game is tense and serious, as the player's character is fighting a war and trying to uncover his uncertain past.
 
 \subsection*{Target Customer}
 Fans of Metroidvania-esque games that also enjoys fighting game elements. Players who like combat systems based off combos (Street Fighter/Tekken, Devil May Cry and Super Smash Bros).
