--- a/Requirement Document/Rev 1/RequirementDocumentRev1.tex
+++ b/Requirement Document/Rev 1/RequirementDocumentRev1.tex
@@ -1460,7 +1460,7 @@ The fighting mechanics of Super Smash Bros Franchise will be used to inspire the
 			\hline
 			ID:218 & \multicolumn{2}{l|}{Type:Release Requirements} \\ \hline
 			PUC: All & \multicolumn{2}{l|}{Originator: Tian Guo} \\ \hline
-			Description & \multicolumn{2}{m{0.85\textwidth}|}{The product shall shall be able to run on standard hardware requirements on release} \\ \hline
+			Description & \multicolumn{2}{m{0.85\textwidth}|}{The product shall be able to run on standard hardware requirements on release} \\ \hline
 			Rationale & \multicolumn{2}{m{0.85\textwidth}|}{Product should be able to run on computer hardware that most people has or better.} \\ \hline
 			Fit Criterion & \multicolumn{2}{m{0.85\textwidth}|}{Should be able to run on the following detailed specification as a bare minimum: Desktop: OS: Windows XP SP2+, Mac OS X 10.9+, Ubuntu 12.04+, SteamOS+. Graphics card: DX9 (shader model 3.0) or DX11 with feature level 9.3 capabilities. CPU: SSE2 instruction set support. Audio levels: Recommended to be listened to at a comfortable level.} \\ \hline
 			Priority& \multicolumn{2}{m{0.85\textwidth}|}{Very High} \\ \hline
@@ -1474,11 +1474,11 @@ The fighting mechanics of Super Smash Bros Franchise will be used to inspire the
 		\begin{table}[H]
 			\begin{tabular}{|l|l|l|}
 				\hline
-				ID:218 & \multicolumn{2}{l|}{Type:Release Requirements} \\ \hline
-				PUC: All & \multicolumn{2}{l|}{Originator: Tian Guo} \\ \hline
-				Description & \multicolumn{2}{m{0.85\textwidth}|}{The product shall shall be able to run on standard hardware requirements on release} \\ \hline
-				Rationale & \multicolumn{2}{m{0.85\textwidth}|}{Product should be able to run on computer hardware that most people has or better.} \\ \hline
-				Fit Criterion & \multicolumn{2}{m{0.85\textwidth}|}{Should be able to run on the following detailed specification as a bare minimum: Desktop: OS: Windows XP SP2+, Mac OS X 10.9+, Ubuntu 12.04+, SteamOS+. Graphics card: DX9 (shader model 3.0) or DX11 with feature level 9.3 capabilities. CPU: SSE2 instruction set support. Audio levels: Recommended to be listened to at a comfortable level.} \\ \hline
+				ID:218 & \multicolumn{2}{l|}{Type:Non-Functional Security Requirements} \\ \hline
+				PUC: All & \multicolumn{2}{l|}{Originator: Jonathan Yu} \\ \hline
+				Description & \multicolumn{2}{m{0.85\textwidth}|}{The product shall protect all sensitive information } \\ \hline
+				Rationale & \multicolumn{2}{m{0.85\textwidth}|}{The risk of sensitive information being released is worth the cost of protecting it} \\ \hline
+				Fit Criterion & \multicolumn{2}{m{0.85\textwidth}|}{ All sensitivity information shall be encrypted } \\ \hline
 				Priority& \multicolumn{2}{m{0.85\textwidth}|}{Very High} \\ \hline
 			\end{tabular}
 		\end{table}
